--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="homeimg">
-        <img src="male-avatar-portrait-of-a-young-man-with-a-beard-illustration-of-male-character-in-modern-color-style-vector.jpg" alt="" >
+        <img src="Realistic-Male-Profile-Picture.webp" alt="" >
     </div>
 
 </div>
