--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3>Hello, It's Me</h3>
             <h1>Tushar Gupta</h1>
             <h3>And I'm a <span id="text"> </span></h3>
-            <p>Lorem ipsum d praesentium aiatur tenetur veritatis odio. ipsum<br> dolor sit amet consectetur adipisicing elit. Velit quos pariatur praesentium culpa sint laudantium, aut a quae sunt? Qui!</p>
+            <p style="color: #57f005;">I am a fourth-year Computer Science student at Delhi Technological University (DTU) with a keen interest in web development. </p>
             </div>
                 <div class="homesection">
                     <a href="#" style="--i:1" class="active"><i class='bx bxl-meta'></i></a>
@@ -35,7 +35,7 @@
                     <a href="#" style="--i:1" class="active"><i class='bx bxl-linkedin'></i></a>
                     <a href="#" style="--i:1" class="active"><i class='bx bxl-whatsapp' ></i></a>
                 </div>
-                <a href="#" class="btn-box">More About Me</a>
+                <a href="https://drive.google.com/file/d/1hX34BhDL3DYn61--6A5JfOrd7Of7PuAY/view?usp=drive_link" class="btn-box">More About Me</a>
             </div>
         </div>
         <div class="homeimg">
@@ -49,14 +49,14 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="male-avatar-portrait-of-a-young-man-with-a-beard-illustration-of-male-character-in-modern-color-style-vector.jpg" alt="">
+            <img src="Realistic-Male-Profile-Picture.webp" alt="">
         </div>
         <div class="about-text">
             <h2>About<span class="me"> Me</span></h2>
             <h4>Full Stack Developer</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad accusantium quos facilis distinctio impedit omnis ratione, suscipit molestiae minima, quod dolores repellat, sint harum? Laboriosam placeat quaerat voluptate rerum praesentium, tempore temporibus fugit deleniti. ipsum dolor sit, amet consectetur adipisicing elit. Eum accusantium totam quia voluptates voluptate laboriosam accusamus sed praesentium id ducimus in vero libero ipsum repellendus corrupti omnis, asperiores, quidem temporibus. Dolore nihil illo molestiae?</p>
+            <p>As a fourth-year Computer Science student at Delhi Technological University, I specialize in crafting seamless and dynamic web applications using the MERN stack. My journey in web development is driven by a passion for innovation and a relentless pursuit of excellence. I thrive on tackling complex problems and transforming ideas into interactive, user-friendly digital experiences. With a solid foundation in computer science and hands-on experience in web development, I am eager to bring my creativity and technical prowess to cutting-edge projects in the tech industry.</p>
         </div>
-        <a href="#" class="btn-box">More About Me</a>
+        <a href="https://drive.google.com/file/d/1hX34BhDL3DYn61--6A5JfOrd7Of7PuAY/view?usp=drive_link" class="btn-box">More About Me</a>
     </section>
     <section>
         <div class="services" id="services">
@@ -211,7 +211,7 @@
                 <h1 class="sub-title">Latest <span class="me"> Project</span></h1>
                 <div class="portfolio-content">
                     <div class="row">
-                        <img src="male-avatar-portrait-of-a-young-man-with-a-beard-illustration-of-male-character-in-modern-color-style-vector.jpg" alt="">
+                        <img src="ecom.webp" alt="">
                         <div class="layer">
                             <h5>UI/UX Design</h5>
                             <p>Lorem, ipsum dolor.</p>
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="male-avatar-portrait-of-a-young-man-with-a-beard-illustration-of-male-character-in-modern-color-style-vector.jpg" alt="">
+                        <img src="chitchat.jpg" alt="">
                         <div class="layer">
                             <h5>UI/UX Design</h5>
                             <p>Lorem, ipsum dolor.</p>
@@ -231,7 +231,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="male-avatar-portrait-of-a-young-man-with-a-beard-illustration-of-male-character-in-modern-color-style-vector.jpg" alt="">
+                        <img src="binary car.webp" alt="">
                         <div class="layer">
                             <h5>UI/UX Design</h5>
                             <p>Lorem, ipsum dolor.</p>
